--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/***********************************************/
+
+*{
+    padding: 0;
+    margin: 0;
+    font-family: Poppins, serif;
+}
